<resources>
    <string name="app_name">Game of Life</string>

    <string name="xs_pencil">Pencil</string>
    <string name="xs_eraser">Eraser</string>
    <string name="xs_clear">Clear</string>
    <string name="xs_start_or_stop">Start or stop</string>
    <string name="settings">Settings</string>
    <string name="speed">Speed</string>
    <string name="short_click_clear_message">Click and hold the button to clear the field</string>
    <string name="xs_next_generation">Next generation</string>
    <string name="xs_initial_state">Initial state</string>
    <string name="xs_move">Move grid</string>

    <string name="speed_key" translatable="false">SPEED</string>
    <string name="stroke_width_key" translatable="false">STROKE_WIDTH</string>
    <string name="min_cell_width_grid_key" translatable="false">MIN_CELL_WIDTH_GRID</string>
    <string name="default_cell_width_key" translatable="false">DEFAULT_CELL_WIDTH</string>
    <string name="default_cell_width_preference_title">Default cell width</string>
    <string name="ok">OK</string>
    <string name="invalid_input_message">Please enter a valid Life 1.05 file.</string>
    <string name="invalid_input_title">Invalid input</string>
    <string name="xs_add_from_file">Create from file</string>
    <string name="parse">Parse</string>
    <string name="create_from_file_activity_label">Create from file</string>
    <string name="parsing_progress_dialog_message">Parsing…</string>
    <string name="cell_color">Cell color</string>
    <string name="cell_color_key">CELL_COLOR_INT</string>
    <string name="colors_pref_category">Colors</string>
    <string name="grid_color">Grid color</string>
    <string name="grid_color_key">GRID_COLOR_INT</string>
    <string name="open_pattern">Open pattern</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="background_color">Background color</string>
    <string name="background_color_key">BACKGROUND_COLOR_INT</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="xs_files_button">Files</string>
    <string name="pattern_name">Pattern name</string>
    <string name="file_name">Filename</string>
    <string name="comments">Comments</string>
    <string name="creator">Creator</string>
    <string name="save">Save</string>
    <string name="no_pattern_name_given_message">Please give your pattern a name</string>
    <string name="cells_array_save_error">Something went wrong. Nothing to save!</string>
    <string name="permission_denied_save_error">Couldn\'t save the file because permission was denied.</string>
    <string name="pattern_saved">Pattern saved!</string>
    <string name="saved_patterns">Saved</string>
    <string name="preloaded_patterns">Preloaded</string>
    <string name="invalid_filename_message">Please use only letters, numbers, spaces and dashes in your pattern name.</string>
    <string name="delete_pattern_message">Remove the pattern \'%s\'?</string>
    <string name="remove">Remove</string>
    <string name="file_deletion_failed">File deletion failed</string>
    <string name="file_deleted">File deleted</string>
    <string name="search">Search</string>
    <string name="no_results">No results</string>
</resources>
