<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="100"
        android:dialogTitle="Speed in ms"
        android:inputType="number"
        android:key="@string/speed_key"
        android:title="@string/speed" />
    <!--<ListPreference
        android:defaultValue="1"
        android:dialogTitle="@string/stroke_width_dialog_title"
        android:entries="@array/stroke_width_entries"
        android:entryValues="@array/stroke_width_values"
        android:key="@string/stroke_width_key"
        android:title="@string/stroke_width" />-->
    <ListPreference
        android:defaultValue="15"
        android:dialogTitle="Minimum grid space in pixels"
        android:entries="@array/min_grid_cell_width_entries"
        android:entryValues="@array/min_grid_cell_width_values"
        android:key="@string/min_cell_width_grid_key"
        android:title="Minimum cell width to draw grid" />
    <ListPreference
        android:defaultValue="50"
        android:dialogTitle="@string/default_cell_width_preference_title"
        android:entries="@array/default_cell_width_entries"
        android:entryValues="@array/default_cell_width_values"
        android:key="@string/default_cell_width_key"
        android:title="@string/default_cell_width_preference_title" />
</PreferenceScreen>