<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.teinproductions.tein.gameoflife.ViewOfLife
        android:id="@+id/view_of_life"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/nextGenButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/xs_next_generation"
                android:onClick="onClickNextGen"
                android:src="@drawable/ic_arrow_forward_black_36dp" />

            <ImageButton
                android:id="@+id/initialStateButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/xs_initial_state"
                android:onClick="onClickInitialState"
                android:src="@drawable/ic_skip_previous_black_36dp" />

            <ImageButton
                android:id="@+id/addFromFileButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/xs_files_button"
                android:onClick="onClickFiles"
                android:src="@drawable/ic_folder_open_black_36dp" />

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/settings"
                android:onClick="onClickSettings"
                android:src="@drawable/ic_settings_black_36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_behavior="com.teinproductions.tein.gameoflife.FABBehavior">

            <ImageButton
                android:id="@+id/pencilButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/xs_pencil"
                android:onClick="onClickPencil"
                android:src="@drawable/ic_mode_edit_black_36dp" />

            <ImageButton
                android:id="@+id/eraseButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/xs_eraser"
                android:onClick="onClickErase"
                android:src="@drawable/ic_remove_circle_black_36dp" />

            <ImageButton
                android:id="@+id/moveButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/xs_move"
                android:onClick="onClickMove"
                android:src="@mipmap/ic_cursor_move_black_36dp" />

            <ImageButton
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/xs_clear"
                android:onClick="onClickClear"
                android:src="@drawable/ic_clear_black_36dp" />

            <ImageButton
                android:id="@+id/playPause_button"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/xs_start_or_stop"
                android:onClick="onClickPlayPause"
                android:src="@drawable/ic_play_arrow_black_36dp" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
