<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/color_sample_view"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:background="#d9d935" />

        <TextView
            android:id="@+id/r_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/color_sample_view"
            android:padding="16dp"
            android:text="R" />

        <TextView
            android:id="@+id/rv_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/r_tv"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            tools:text="255" />

        <SeekBar
            android:id="@+id/r_seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/r_tv"
            android:layout_alignTop="@id/r_tv"
            android:layout_toEndOf="@id/r_tv"
            android:layout_toLeftOf="@id/rv_tv"
            android:layout_toRightOf="@id/r_tv"
            android:layout_toStartOf="@id/rv_tv"
            android:max="255" />

        <TextView
            android:id="@+id/g_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/r_tv"
            android:padding="16dp"
            android:text="G" />

        <TextView
            android:id="@+id/gv_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/g_tv"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            tools:text="255" />

        <SeekBar
            android:id="@+id/g_seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/g_tv"
            android:layout_alignTop="@id/g_tv"
            android:layout_toEndOf="@id/g_tv"
            android:layout_toLeftOf="@id/gv_tv"
            android:layout_toRightOf="@id/g_tv"
            android:layout_toStartOf="@id/gv_tv"
            android:max="255" />

        <TextView
            android:id="@+id/b_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/g_tv"
            android:padding="16dp"
            android:text="B" />

        <TextView
            android:id="@+id/bv_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/b_tv"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            tools:text="255" />

        <SeekBar
            android:id="@+id/b_seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/b_tv"
            android:layout_alignTop="@id/b_tv"
            android:layout_toEndOf="@id/b_tv"
            android:layout_toLeftOf="@id/bv_tv"
            android:layout_toRightOf="@id/b_tv"
            android:layout_toStartOf="@id/bv_tv"
            android:max="255" />

        <Button
            android:id="@+id/ok_button"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/b_seekBar"
            android:layout_margin="8dp"
            android:onClick="onClickOK"
            android:text="@string/ok" />

        <Button
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/b_seekBar"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@id/ok_button"
            android:layout_toStartOf="@id/ok_button"
            android:onClick="onClickCancel"
            android:text="@string/cancel" />

        <Button
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/b_seekBar"
            android:layout_margin="8dp"
            android:onClick="onClickReset"
            android:text="@string/reset" />
    </RelativeLayout>
</ScrollView>
